<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gallery="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="11111"
        android:title="@string/action_order"
        gallery:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single" >

                <!-- Name -->
                <item
                    android:id="@+id/order_name"
                    android:checked="true"
                    android:orderInCategory="1"
                    android:title="@string/order_name"
                    gallery:showAsAction="always"/>

                <!-- Date -->
                <item
                    android:id="@+id/order_date"
                    android:orderInCategory="2"
                    android:title="@string/order_date"
                    gallery:showAsAction="always"/>

                <!-- Size -->
                <item
                    android:id="@+id/order_size"
                    android:orderInCategory="3"
                    android:title="@string/order_size"
                    gallery:showAsAction="always"/>
            </group>
        </menu>
    </item>

</menu>